--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
     "next": "15.3.3",
