--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "motion": "^12.16.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
+    "primereact": "^10.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
